--- a/.vscode/estilo.css
+++ b/.vscode/estilo.css
@@ -21,7 +21,7 @@ p{
 }
 .baner{
     width: 100%;
-    height: 300px;
+    height: 200px;
     background-position: center;
     background-size: cover;
 }
@@ -165,4 +165,39 @@ main>img{
 }
 main>p{
     font-size: 20px;
+}
+
+.produto{
+    height: 300px;
+    overflow: hidden;
+}
+
+.prod_descricao{
+    float: left;
+    width: 700px;
+    text-align: justify;
+
+}
+
+.prod_img{
+    float: left;
+    width: 300px;
+}
+
+.prod_img img{
+    width: 300px;
+    display: inline-block;
+}
+
+.logo_mabi img{
+    float: left;
+    width: 200px;
+    margin-left: 0;
+}
+
+.Menu{
+    float: left;
+    width: 700px;
+    text-align: justify;
+    margin-right: 0;
 }
