--- a/estilo.css
+++ b/estilo.css
@@ -21,30 +21,42 @@ p{
 }
 .baner{
     width: 100%;
-    height: 200px;
+    height: 50px;
     background-position: center;
     background-size: cover;
 }
 
 header {
-    background-color: #333;
+    /* background-image: url("../imagens/logo_mabi.png") no-repeat; */
+    background-color: #000000;
     color: #fff;
-    padding: 10px
+    padding: 10px;
+    height: 100px;
 }
 .baner> h1{
-margin: auto;
-text-align: center;
-padding: 100px;
-box-sizing: border-box;
-text-shadow: 0px 0px 10px #000;
-font-size: 3em;
+    margin: auto;
+    text-align: center;
+    padding: 0px;
+    box-sizing: border-box;
+    text-shadow: 0px 0px 10px #000;
+    font-size: 3em;
+    
+
 }
 
+header img{
+    width: 13%;
+    overflow: hidden;
+    height: 100px;
+    float: left;
+}
 
 header h1 {
     margin: 0;
+    float: left;
+    margin-left: 50px;
+    font-family:'Gill Sans', 'Gill Sans MT';
 }
-
 nav ul {
     list-style: none;
     margin: 0;
