--- a/estilo.css
+++ b/estilo.css
@@ -24,6 +24,7 @@ p{
     height: 50px;
     background-position: center;
     background-size: cover;
+    margin-top: 20px;
 }
 
 header {
@@ -109,10 +110,13 @@ main {
 }
 
 footer {
-    background-color: #333;
+    background-color: #030000;
     color: #fff;
     text-align: center;
     padding: 10px;
+    overflow: auto;
+    display: block;
+    width: 100%;
 }
 li{
     padding: 10px;
@@ -212,4 +216,56 @@ main>p{
     width: 700px;
     text-align: justify;
     margin-right: 0;
+}
+.linha{
+    width: 1300px;
+    margin: auto;
+    display: block;
+    
+}
+.linha img{
+    max-height: 1000px;
+}
+
+
+.coluna{
+    width: 400px;
+    padding: 1%;
+    /* display: inline-block; */
+    float: left;
+    margin: 0 auto;
+    /* border: 1px solid #333; */
+    height: 500px;
+    overflow: hidden;
+
+
+}
+
+.coluna img{
+    width: 80%;
+    
+
+}
+
+.coluna text{
+    font-family: Arial;
+    overflow: auto;
+
+}
+
+.coluna button{
+    border-radius: 10px;
+    color: #fff;
+    background-color: #333;
+    
+    
+    
+}
+
+
+ header {
+    background-color: #000000;
+    color: #fff;
+    padding: 1rem;
+    text-align: center;
 }
