--- a/estilo.css
+++ b/estilo.css
@@ -290,3 +290,21 @@ main>p{
     font-family:Arial, Helvetica, sans-serif;
     width: auto;
  }
+
+ .login_entrar{
+    color: #000;
+    font-family:Arial, Helvetica, sans-serif;
+    width: 300px;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+ }
+
+ .box-login{
+    max-width: 1000px;
+    height: 1000px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
